<resources>
    <string name="app_name">Your Timer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00">00</string>
    <string name="time_dots">:</string>
    <string name="quick_start">Quick start</string>
    <string name="start">start</string>
    <string name="start_time_card">START: %s</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="back">Back</string>
    <string name="time_is_out">Time is out</string>
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="reps">reps</string>
    <string name="time">time</string>
    <string name="name">name</string>
    <string name="save">save</string>
    <string name="add_card">Add card</string>
    <string name="preset">Preset</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="card_name">Card name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_new_set_up">add</string>
    <string name="your_presets">Your presets</string>
    <string name="x">X</string>
    <string name="error_field_is_empty">Field is empty</string>
    <string name="preset_saved">Preset saved</string>
    <string name="preset_fields_is_empty">Preset fields is empty</string>
</resources>