<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_time_card_with_buttons_reps_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        style="?attrPrimaryTextInputLayout"
        android:hint="@string/reps"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_time_card_with_buttons_reps_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_time_card_with_buttons_reps_edit_text"
            android:layout_width="wrap_content"
            style="?attrSecondaryTextView"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/item_time_card_with_buttons_reps_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/text_36_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_time_card_with_buttons_hours_text_input_layout"
        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_reps_input_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_time_card_with_buttons_hours_text_input_layout"
        style="?attrPrimaryTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_time_card_with_buttons_minutes_text_input_layout"
        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_reps_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/_00">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_time_card_with_buttons_hours_edit_text"
            style="?attrSecondaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_time_card_with_buttons_minutes_text_input_layout"
        style="?attrPrimaryTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/min"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_time_card_with_buttons_seconds_text_input_layout"
        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_hours_text_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/_00">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_time_card_with_buttons_minutes_edit_text"
            style="?attrSecondaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_time_card_with_buttons_seconds_text_input_layout"
        style="?attrPrimaryTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_minutes_text_input_layout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_time_card_with_buttons_seconds_edit_text"
            style="?attrSecondaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>