<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/hours_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        style="@style/PrimaryTextViewStyle"
        app:layout_constraintEnd_toEndOf="@id/hours_picker"
        app:layout_constraintStart_toStartOf="@id/hours_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        style="@style/PrimaryTextViewStyle"
        app:layout_constraintEnd_toEndOf="@id/minutes_picker"
        app:layout_constraintStart_toStartOf="@id/minutes_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seconds_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec"
        style="@style/PrimaryTextViewStyle"
        app:layout_constraintEnd_toEndOf="@id/seconds_picker"
        app:layout_constraintStart_toStartOf="@id/seconds_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/hours_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/NumberPickerTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hours_text_view" />

    <TextView
        android:id="@+id/hours_dots_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_dots"
        style="@style/PrimaryTextViewStyle"
        android:textSize="@dimen/text_36_sp"
        app:layout_constraintBottom_toBottomOf="@id/hours_picker"
        app:layout_constraintStart_toEndOf="@id/hours_picker"
        app:layout_constraintTop_toTopOf="@id/hours_picker"
        app:layout_constraintVertical_bias="0.49" />

    <NumberPicker
        android:id="@+id/minutes_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/NumberPickerTheme"
        app:layout_constraintStart_toEndOf="@id/hours_dots_text_view"
        app:layout_constraintTop_toBottomOf="@id/minutes_text_view" />

    <TextView
        android:id="@+id/minutes_dots_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_dots"
        style="@style/PrimaryTextViewStyle"
        android:textSize="@dimen/text_36_sp"
        app:layout_constraintBottom_toBottomOf="@id/minutes_picker"
        app:layout_constraintStart_toEndOf="@id/minutes_picker"
        app:layout_constraintTop_toTopOf="@id/minutes_picker"
        app:layout_constraintVertical_bias="0.49" />

    <NumberPicker
        android:id="@+id/seconds_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/NumberPickerTheme"
        app:layout_constraintStart_toEndOf="@id/minutes_dots_text_view"
        app:layout_constraintTop_toBottomOf="@id/seconds_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>