<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_preset_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:textColorHint="@color/third_text_color"
        app:boxStrokeColor="@color/third_text_color"
        app:endIconMode="clear_text"
        android:hint="Card name"
        app:hintTextColor="@color/third_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderTextColor="@color/third_text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_preset_text_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/text_16_sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/item_preset_reps_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        app:layout_constraintStart_toStartOf="@id/item_preset_reps_edit_text"
        app:layout_constraintEnd_toEndOf="@id/item_preset_reps_edit_text"
        app:layout_constraintTop_toBottomOf="@id/item_preset_text_input_layout" />

    <TextView
        android:id="@+id/item_preset_hours_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        app:layout_constraintStart_toStartOf="@id/item_preset_hours_edit_text"
        app:layout_constraintEnd_toEndOf="@id/item_preset_hours_edit_text"
        app:layout_constraintTop_toBottomOf="@id/item_preset_text_input_layout" />

    <TextView
        android:id="@+id/item_preset_minutes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintStart_toStartOf="@id/item_preset_minutes_edit_text"
        app:layout_constraintEnd_toEndOf="@id/item_preset_minutes_edit_text"
        app:layout_constraintTop_toBottomOf="@id/item_preset_text_input_layout" />

    <TextView
        android:id="@+id/item_preset_seconds_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec"
        app:layout_constraintStart_toStartOf="@id/item_preset_seconds_edit_text"
        app:layout_constraintEnd_toEndOf="@id/item_preset_seconds_edit_text"
        app:layout_constraintTop_toBottomOf="@id/item_preset_text_input_layout" />

    <EditText
        android:id="@+id/item_preset_reps_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_00"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_preset_reps_text_view" />

    <EditText
        android:id="@+id/item_preset_hours_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_00"
        android:inputType="number"
        android:maxLength="2"
        android:layout_marginStart="@dimen/_16dp"
        app:layout_constraintStart_toEndOf="@id/item_preset_reps_edit_text"
        app:layout_constraintTop_toBottomOf="@id/item_preset_reps_text_view" />

    <TextView
        android:id="@+id/item_preset_hours_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_dots"
        app:layout_constraintBottom_toBottomOf="@id/item_preset_hours_edit_text"
        app:layout_constraintStart_toEndOf="@id/item_preset_hours_edit_text"
        app:layout_constraintTop_toTopOf="@id/item_preset_hours_edit_text" />

    <EditText
        android:id="@+id/item_preset_minutes_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_00"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/item_preset_hours_dots"
        app:layout_constraintTop_toBottomOf="@id/item_preset_reps_text_view" />

    <TextView
        android:id="@+id/item_preset_minutes_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_dots"
        app:layout_constraintBottom_toBottomOf="@id/item_preset_minutes_edit_text"
        app:layout_constraintStart_toEndOf="@id/item_preset_minutes_edit_text"
        app:layout_constraintTop_toTopOf="@id/item_preset_minutes_edit_text" />

    <EditText
        android:id="@+id/item_preset_seconds_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_00"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/item_preset_minutes_dots"
        app:layout_constraintTop_toBottomOf="@id/item_preset_reps_text_view" />

    <androidx.appcompat.widget.AppCompatImageButton
        style="@style/PrimaryButtonStyle"
        android:id="@+id/item_preset_delete_button"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>