<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_text_color"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/item_time_card_with_buttons_reps_edit_text"
                style="@style/SecondaryEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_time_card_with_buttons_reps_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:text="@string/x"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/text_36_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_reps_edit_text"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:backgroundTint="@color/primary_layout_background"
                app:cardCornerRadius="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_reps_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/primary_text_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp">

                    <TextView
                        android:id="@+id/item_time_card_with_buttons_hours_text_view"
                        style="?attrThirdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour"
                        app:layout_constraintEnd_toEndOf="@id/item_time_card_with_buttons_hours_end_barrier"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/item_time_card_with_buttons_hours_edit_text"
                        style="?attrPrimaryEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/item_time_card_with_buttons_hours_end_barrier"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/item_time_card_with_buttons_hours_text_view" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/item_time_card_with_buttons_hours_end_barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="end"
                        app:constraint_referenced_ids="item_time_card_with_buttons_hours_text_view, item_time_card_with_buttons_hours_edit_text" />

                    <TextView
                        android:id="@+id/item_time_card_with_buttons_hours_dots"
                        style="?attrSecondaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_dots"
                        app:layout_constraintBottom_toBottomOf="@id/item_time_card_with_buttons_hours_edit_text"
                        app:layout_constraintStart_toStartOf="@id/item_time_card_with_buttons_hours_end_barrier"
                        app:layout_constraintTop_toTopOf="@id/item_time_card_with_buttons_hours_edit_text"
                        app:layout_constraintVertical_bias="0.45" />

                    <TextView
                        android:id="@+id/item_time_card_with_buttons_minutes_text_view"
                        style="?attrThirdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        app:layout_constraintEnd_toEndOf="@id/item_time_card_with_buttons_minutes_end_barrier"
                        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_hours_dots"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/item_time_card_with_buttons_minutes_edit_text"
                        style="?attrPrimaryEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/item_time_card_with_buttons_minutes_end_barrier"
                        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_hours_dots"
                        app:layout_constraintTop_toBottomOf="@id/item_time_card_with_buttons_minutes_text_view" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/item_time_card_with_buttons_minutes_end_barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="end"
                        app:constraint_referenced_ids="item_time_card_with_buttons_minutes_text_view, item_time_card_with_buttons_minutes_edit_text" />

                    <TextView
                        android:id="@+id/item_time_card_with_buttons_minutes_dots"
                        style="?attrSecondaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_dots"
                        app:layout_constraintBottom_toBottomOf="@id/item_time_card_with_buttons_minutes_edit_text"
                        app:layout_constraintStart_toStartOf="@id/item_time_card_with_buttons_minutes_end_barrier"
                        app:layout_constraintTop_toTopOf="@id/item_time_card_with_buttons_minutes_edit_text"
                        app:layout_constraintVertical_bias="0.45" />

                    <TextView
                        android:id="@+id/item_time_card_with_buttons_seconds_text_view"
                        style="?attrThirdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sec"
                        app:layout_constraintEnd_toEndOf="@id/item_time_card_with_buttons_seconds_end_barrier"
                        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_minutes_dots"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/item_time_card_with_buttons_seconds_edit_text"
                        style="?attrPrimaryEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/item_time_card_with_buttons_seconds_end_barrier"
                        app:layout_constraintStart_toEndOf="@id/item_time_card_with_buttons_minutes_dots"
                        app:layout_constraintTop_toBottomOf="@id/item_time_card_with_buttons_seconds_text_view" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/item_time_card_with_buttons_seconds_end_barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="end"
                        app:constraint_referenced_ids="item_time_card_with_buttons_seconds_text_view, item_time_card_with_buttons_seconds_edit_text" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>